--- a/doc2vec_model.ipynb
+++ b/doc2vec_model.ipynb
@@ -2,47 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from scipy.spatial import distance\n",
-    "from heapq import nsmallest\n",
     "from sklearn.metrics import pairwise_distances\n",
     "import random\n",
-    "from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
-    "from gensim.test.utils import get_tmpfile\n",
+    "from gensim.models.doc2vec import Doc2Vec\n",
     "from nltk.tokenize import TweetTokenizer\n",
     "tknzr = TweetTokenizer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "articles = pd.read_csv('dataset/article_data_newyork', delimiter=',', header=None)\n",
-    "tables = pd.read_csv('dataset/table_data_newyork', delimiter=',', header=None)"
+    "articles = pd.read_csv('dataset/data_articles_test.csv', delimiter=',', keep_default_na=False)\n",
+    "tables = pd.read_csv('dataset/dataset_distinct_tables.csv', delimiter=',', keep_default_na=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "formattedArticles = articles.iloc[:,:].values\n",
-    "formattedTables = tables.iloc[:,:].values"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -60,32 +53,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 52426/52426 [01:35<00:00, 549.23it/s] \n"
+      "89935it [01:29, 1002.71it/s]\n"
      ]
     }
    ],
    "source": [
-    "tablesByCharacteristics = []\n",
+    "tables_vector = []\n",
+    "tables_ids = []\n",
     "\n",
-    "for tables in tqdm(formattedTables):\n",
+    "for i, row in tqdm(tables.iterrows()):\n",
     "    \n",
-    "    table_title = str(tables[1])\n",
-    "    table_page_content = str(tables[2])\n",
-    "    \n",
-    "    catch = table_title+\" \"+table_page_content\n",
+    "    table_id = row['table_id']\n",
+    "    table_title = row['table_page_title']\n",
     "    \n",
     "    vector_words = tknzr.tokenize(table_title)\n",
-    "    \n",
     "    word_embedding = embedding_model.infer_vector(vector_words)\n",
     "    \n",
-    "    tablesByCharacteristics.append(word_embedding)"
+    "    tables_ids.append(table_id)\n",
+    "    tables_vector.append(word_embedding) "
    ]
   },
   {
@@ -97,38 +89,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 148/148 [00:08<00:00, 18.04it/s]\n"
+      "1026it [00:01, 774.60it/s]\n"
      ]
     }
    ],
    "source": [
-    "corpusArticlesID = []\n",
-    "articlesByCharacteristics = []\n",
+    "articles_ids = []\n",
+    "articles_vector = []\n",
     "\n",
-    "for articles in tqdm(formattedArticles):\n",
+    "for i, row in tqdm(articles.iterrows()):\n",
     "    \n",
-    "    article_url = articles[0]\n",
-    "    article_page_title = articles[1]\n",
-    "    article_main_passage = articles[2][:6000]    \n",
-    "    table_url = articles[3]\n",
+    "    article_id = row['page_id']\n",
+    "    article_page_title = row['page_title']\n",
     "    \n",
-    "    catch = article_page_title +\" \"+article_main_passage\n",
-    "    \n",
-    "    corpusArticlesID.append(table_url)\n",
+    "    articles_ids.append(article_id)\n",
     "        \n",
     "    #embedding\n",
-    "    vector_words = tknzr.tokenize(article_main_passage)\n",
-    "    \n",
+    "    vector_words = tknzr.tokenize(article_page_title)\n",
     "    word_embedding = embedding_model.infer_vector(vector_words)\n",
     "    \n",
-    "    articlesByCharacteristics.append(word_embedding)"
+    "    articles_ids.append(article_id)\n",
+    "    articles_vector.append(word_embedding)"
    ]
   },
   {
@@ -140,28 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getIdRankedTalbes(topK,distanceVector):\n",
-    "\n",
-    "    idRankedTables = []\n",
-    "\n",
-    "    for topkDistance in topK:\n",
-    "        \n",
-    "        index = np.where(distanceVector == topkDistance)\n",
-    "         \n",
-    "        indexColummun = index[0][0]\n",
-    "        \n",
-    "        idRankedTables.append(formattedTables[indexColummun][0])\n",
-    "\n",
-    "    return idRankedTables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,8 +137,8 @@
     "    accuracy = 0\n",
     "\n",
     "    for idTable in idRankedTables:\n",
-    "    \n",
-    "        if idTable == idQueryGoal:\n",
+    "        \n",
+    "        if idTable[0] == idQueryGoal:\n",
     "    \n",
     "            accuracy = 1\n",
     "            break;\n",
@@ -181,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,13 +166,9 @@
     "            \n",
     "        AverageTop10.append(accuracy)\n",
     "        \n",
-    "    if k == 100:\n",
+    "    if k == 20:\n",
     "            \n",
-    "        AverageTop100.append(accuracy)\n",
-    "        \n",
-    "    if k == 1000:\n",
-    "            \n",
-    "        AverageTop1000.append(accuracy)"
+    "        AverageTop20.append(accuracy)"
    ]
   },
   {
@@ -217,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 148/148 [04:32<00:00,  1.01s/it]\n"
+      "100%|██████████| 1026/1026 [05:10<00:00,  3.36it/s]\n"
      ]
     }
    ],
@@ -232,26 +195,40 @@
     "AverageTop1 = []\n",
     "AverageTop5 = []\n",
     "AverageTop10 = []\n",
-    "AverageTop100 = []\n",
-    "AverageTop1000 = []\n",
+    "AverageTop20 = []\n",
     "\n",
-    "topK = [1,5,10,100,1000]\n",
+    "topK = [1,5,10,20]\n",
     "\n",
-    "for i in tqdm(range(len(articlesByCharacteristics))):\n",
+    "for i in tqdm(range(len(articles_vector))):\n",
     "    \n",
-    "    distanceVector = pairwise_distances(articlesByCharacteristics[i].reshape(1,300), tablesByCharacteristics, metric='cosine')\n",
+    "    idQueryGoal = articles_ids[i]\n",
     "    \n",
-    "    idQueryGoal = corpusArticlesID[i]\n",
+    "    distance_vector = pairwise_distances(articles_vector[i].reshape(1,300), tables_vector, metric='cosine')\n",
     "    \n",
+    "    #creating the dataframe\n",
+    "    all_tables_score = []\n",
+    "    \n",
+    "    for j in range(len(tables_ids)):\n",
+    "        \n",
+    "        table_id = tables_ids[j]\n",
+    "        table_score = distance_vector[0][j]\n",
+    "        \n",
+    "        new_row = {\"table_id\": table_id,\"table_score\": table_score}\n",
+    "        \n",
+    "        all_tables_score.append(new_row)\n",
+    "        \n",
+    "    df_all_tables_scores = pd.DataFrame(all_tables_score)\n",
+    "    df_tables_sorting = df_all_tables_scores.sort_values('table_score')\n",
+    "    \n",
+    "    #compute the accuracy\n",
     "    for accuracyK in topK:\n",
     "        \n",
-    "        countTopTables = accuracyK\n",
+    "        selected_top = df_tables_sorting.head(accuracyK)\n",
+    "        min_score = selected_top['table_score'].max()\n",
+    "        draw_tables_socres = df_tables_sorting[df_tables_sorting['table_score'] <= min_score]\n",
+    "        final_ranked_tables = draw_tables_socres.iloc[:,0:1].values\n",
     "        \n",
-    "        topKRank = nsmallest(countTopTables, distanceVector[0])\n",
-    "    \n",
-    "        idRankedTables = getIdRankedTalbes(topKRank,distanceVector[0])\n",
-    "        \n",
-    "        accuracy_value = getAccuracy(idRankedTables,idQueryGoal)\n",
+    "        accuracy_value = getAccuracy(final_ranked_tables,idQueryGoal)\n",
     "        \n",
     "        #save the accuracy on the list\n",
     "        saveAccuracy(accuracyK,accuracy_value)"
@@ -259,18 +236,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1689\n",
-      "0.3919\n",
-      "0.473\n",
-      "0.7838\n",
-      "0.9527\n"
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n"
      ]
     }
    ],
@@ -278,8 +254,7 @@
     "print(str(round(np.mean(AverageTop1),4)))\n",
     "print(str(round(np.mean(AverageTop5),4)))\n",
     "print(str(round(np.mean(AverageTop10),4)))\n",
-    "print(str(round(np.mean(AverageTop100),4)))\n",
-    "print(str(round(np.mean(AverageTop1000),4)))"
+    "print(str(round(np.mean(AverageTop20),4)))"
    ]
   },
   {
