--- a/elastic_search2.ipynb
+++ b/elastic_search2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,12 @@
     "import random\n",
     "from elasticsearch import Elasticsearch\n",
     "from elasticsearch import helpers\n",
-    "indexingTables = Elasticsearch(timeout=30, max_retries=10, retry_on_timeout=True)"
+    "indexing_distinct_tables = Elasticsearch(timeout=30, max_retries=10, retry_on_timeout=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -46,27 +46,27 @@
        "{'acknowledged': True, 'shards_acknowledged': True}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "indexingTables.indices.close(index='tables')\n",
-    "indexingTables.indices.put_settings(index='tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"BM25\"}}}})\n",
-    "indexingTables.indices.open(index='tables')"
+    "indexing_distinct_tables.indices.close(index='distinct_tables')\n",
+    "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"BM25\"}}}})\n",
+    "indexing_distinct_tables.indices.open(index='distinct_tables')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def search_indexing(query, tableField, topK):\n",
     "    \n",
-    "    result= indexingTables.search(\n",
-    "        index=\"tables\", \n",
+    "    result= indexing_distinct_tables.search(\n",
+    "        index=\"distinct_tables\", \n",
     "        body = {\n",
     "        \"_source\": [\"tablePgID\"],\n",
     "        \"from\" : 0,\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,6 +115,9 @@
     "    \n",
     "        articl_key = row['page_id']\n",
     "        article_title = row['page_title']\n",
+    "        article_meta_description = row['meta_description']\n",
+    "        \n",
+    "        #catch = article_title+\" \"+article_meta_description\n",
     "            \n",
     "        result = search_indexing(article_title,tableField,topK)\n",
     "    \n",
@@ -133,55 +136,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "tableField = [\"tablePgTitle\"]\n",
     "#tableField = [\"tablePgTitle\",\"tableSectionTitle\",\"tableCaption\",\"tableHeader\",\"tableBody\"]\n",
-    "topK = [1,5,10,20,50,100,1000]"
+    "topK = [100]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k in topK:\n",
+    "# for k in topK:\n",
     "    \n",
-    "    print(\"\")\n",
+    "#     print(\"\")\n",
     "    \n",
-    "    for field in tableField:\n",
+    "#     for field in tableField:\n",
     "        \n",
-    "        print(\"Acc@\"+str(k)+\" - \"+field)\n",
+    "#         print(\"Acc@\"+str(k)+\" - \"+field)\n",
     "        \n",
-    "        execute_search(field,k)"
+    "#         execute_search(field,k)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acc@1\n",
-      "0.2407\n",
-      "Acc@5\n",
-      "0.2904\n",
-      "Acc@10\n",
-      "0.3236\n",
-      "Acc@20\n",
-      "0.3596\n",
-      "Acc@50\n",
-      "0.4016\n",
       "Acc@100\n",
-      "0.4308\n",
-      "Acc@1000\n",
-      "0.4834\n"
+      "0.46\n"
      ]
     }
    ],
