--- a/table_retrieval2.ipynb
+++ b/table_retrieval2.ipynb
@@ -15,7 +15,7 @@
     "from elasticsearch import helpers\n",
     "from nltk.tokenize import TweetTokenizer\n",
     "tknzr = TweetTokenizer()\n",
-    "indexing_tables = Elasticsearch(timeout=30, max_retries=10, retry_on_timeout=True)\n",
+    "indexing_distinct_tables = Elasticsearch(timeout=30, max_retries=10, retry_on_timeout=True)\n",
     "import tensorflow as tf\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -47,9 +47,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_articles = pd.read_csv('dataset/article_data_newyork', delimiter=',', header=None)\n",
-    "data_articles = raw_articles.iloc[:,:].values"
+    "test_articles = pd.read_csv('dataset/data_articles_test.csv', delimiter=',')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -57,7 +63,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_model = gs.models.FastText.load_fasttext_format('pre_trained_models/cc.en.300.bin')"
+    "# embedding_model = gs.models.FastText.load_fasttext_format('pre_trained_models/cc.en.300.bin')\n",
+    "embedding_model = gs.models.FastText.load('pre_trained_models/embedding_model_50d')"
    ]
   },
   {
@@ -77,30 +84,30 @@
     }
    ],
    "source": [
-    "indexing_tables.indices.close(index='data_table_newyork')\n",
-    "indexing_tables.indices.put_settings(index='data_table_newyork', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
-    "indexing_tables.indices.open(index='data_table_newyork')"
+    "indexing_distinct_tables.indices.close(index='distinct_tables')\n",
+    "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
+    "indexing_distinct_tables.indices.open(index='distinct_tables')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def search_indexing(query):\n",
     "    \n",
-    "    result= indexing_tables.search(\n",
-    "        index=\"data_table_newyork\", \n",
+    "    result= indexing_distinct_tables.search(\n",
+    "        index=\"distinct_tables\", \n",
     "        body = {\n",
-    "        \"_source\": [\"table_url\",\"table_page_title\"],\n",
+    "        \"_source\": [\"tablePgID\",\"tablePgTitle\"],\n",
     "        \"from\" : 0,\n",
-    "        \"size\" : 1000,\n",
+    "        \"size\" : 50,\n",
     "        \"query\": {\n",
     "            \"multi_match\":{\n",
     "              \"type\": \"most_fields\",\n",
     "              \"query\":    query, \n",
-    "              \"fields\": [\"table_page_title\"] \n",
+    "              \"fields\": [\"tablePgTitle\"] \n",
     "            }\n",
     "        }\n",
     "    })\n",
@@ -110,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,17 +131,17 @@
     "    \n",
     "            accuracy = 1\n",
     "            break;\n",
-    "            \n",
+    "\n",
     "    return accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_PAD = 9\n",
+    "MAX_PAD = 31\n",
     "\n",
     "def sequence_padding(X_DIM, value):\n",
     "    \n",
@@ -145,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,9 +189,9 @@
     "        \n",
     "    for hit in result_index['hits']['hits']:\n",
     "    \n",
-    "        table_ID = hit['_source']['table_url']\n",
+    "        table_ID = hit['_source']['tablePgID']\n",
     "        \n",
-    "        table_page_title = hit['_source']['table_page_title']\n",
+    "        table_page_title = hit['_source']['tablePgTitle']\n",
     "    \n",
     "        tables_index.append([table_ID,table_page_title])\n",
     "    \n",
@@ -193,11 +200,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
+     ]
+    }
+   ],
    "source": [
-    "ranking_model = tf.keras.models.load_model('affinity_model_ramdom_1_1.h5')"
+    "ranking_model = tf.keras.models.load_model('GRU_affinity_model_random_negatives_1_5.h5')"
    ]
   },
   {
@@ -209,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,66 +237,69 @@
     "    TOP_K = k\n",
     "    accuracy = []\n",
     "    \n",
-    "    for row_article in tqdm(data_articles):\n",
-    "    \n",
+    "    for i, row in tqdm(test_articles.iterrows()):\n",
+    "        \n",
+    "        article_ID = row['page_id']\n",
+    "        article_title_text = row['page_title']\n",
+    "       \n",
     "        article_title = []\n",
     "        title_table = []\n",
     "        ranked_tables_model = []\n",
-    "    \n",
-    "        article_ID = row_article[3]\n",
-    "        article_title_text = str(row_article[1])\n",
-    "        \n",
+    "\n",
     "        ranked_tables_index = search_index(article_title_text)\n",
     "        \n",
-    "        article_title_embedding = create_embedding(article_title_text)\n",
+    "        if len(ranked_tables_index) > 0:\n",
     "        \n",
-    "        for table_ID, table_title in (ranked_tables_index):\n",
-    "        \n",
-    "            table_title_embedding = create_embedding(str(table_title))\n",
+    "            article_title_embedding = create_embedding(article_title_text)\n",
+    "\n",
+    "            for table_ID, table_title in (ranked_tables_index):\n",
+    "\n",
+    "                table_title_embedding = create_embedding(str(table_title))\n",
+    "\n",
+    "                article_title.append(article_title_embedding)\n",
+    "                title_table.append(table_title_embedding)\n",
+    "\n",
+    "            article_title = np.array(article_title)\n",
+    "            title_table = np.array(title_table)\n",
+    "\n",
+    "            table_ranking_model = ranking_model.predict([article_title,title_table])\n",
+    "\n",
+    "            for i in range(0,len(table_ranking_model)):\n",
+    "\n",
+    "                ranked_tables_model.append([ranked_tables_index[i][0],ranked_tables_index[i][1],table_ranking_model[i][0]]) \n",
+    "\n",
+    "            data_frame = pd.DataFrame(ranked_tables_model, columns = ['table_ID', 'table_title','table_ranking']) \n",
+    "            data_frame_sorting = data_frame.sort_values('table_ranking', ascending=False)\n",
+    "            #final_ranked_tables = data_frame_sorting.iloc[0:TOP_K,0:1].values\n",
     "            \n",
-    "            article_title.append(article_title_embedding)\n",
-    "            title_table.append(table_title_embedding)\n",
-    "    \n",
-    "        article_title = np.array(article_title)\n",
-    "        title_table = np.array(title_table)\n",
-    "    \n",
-    "        table_ranking_model = ranking_model.predict([article_title,title_table])\n",
-    "    \n",
-    "        for i in range(0,len(table_ranking_model)):\n",
-    "        \n",
-    "            ranked_tables_model.append([ranked_tables_index[i][0],ranked_tables_index[i][1],table_ranking_model[i][0]]) \n",
-    "        \n",
-    "        data_frame = pd.DataFrame(ranked_tables_model, columns = ['table_ID', 'table_title','table_ranking']) \n",
-    "        data_frame_sorting = data_frame.sort_values('table_ranking', ascending=False)\n",
-    "        final_ranked_tables = data_frame_sorting.iloc[0:TOP_K,0:1].values\n",
-    "           \n",
-    "        accuracy.append(get_accuracy(article_ID, final_ranked_tables))\n",
-    "        \n",
-    "    result.append([\"Acc@\"+str(k),str(round(np.mean(accuracy),4))])\n",
-    "    #print(\"\")\n",
-    "    #print(\"Acc@\"+str(k))\n",
-    "    #print(str(round(np.mean(accuracy),4)))\n",
-    "    #print(accuracy)"
+    "            selected_top = data_frame_sorting.head(TOP_K)\n",
+    "            min_score = selected_top['table_ranking'].min()\n",
+    "            draw_tables_socres = data_frame_sorting[data_frame_sorting['table_ranking'] >= min_score]\n",
+    "            final_ranked_tables = draw_tables_socres.iloc[:,0:1].values\n",
+    "\n",
+    "            accuracy.append(get_accuracy(article_ID, final_ranked_tables))\n",
+    "\n",
+    "    result.append([\"Acc@\"+str(k),str(round(np.mean(accuracy),4))])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 148/148 [00:24<00:00,  5.00it/s]\n",
-      "100%|██████████| 148/148 [00:24<00:00,  5.05it/s]\n",
-      "100%|██████████| 148/148 [00:25<00:00,  5.09it/s]\n",
-      "100%|██████████| 148/148 [00:24<00:00,  5.07it/s]\n"
+      "1026it [00:44, 23.02it/s]\n",
+      "1026it [00:44, 23.55it/s]\n",
+      "1026it [00:45, 23.48it/s]\n",
+      "1026it [00:44, 23.59it/s]\n"
      ]
     }
    ],
    "source": [
-    "accuracy_K = [1,5,10,100]\n",
+    "accuracy_K = [1,5,10,20]\n",
     "\n",
     "for k in accuracy_K:\n",
     "     \n",
@@ -288,19 +308,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['Acc@1', '0.1757'],\n",
-       " ['Acc@5', '0.3446'],\n",
-       " ['Acc@10', '0.4257'],\n",
-       " ['Acc@100', '0.6689']]"
+       "[['Acc@1', '0.3627'],\n",
+       " ['Acc@5', '0.3822'],\n",
+       " ['Acc@10', '0.392'],\n",
+       " ['Acc@20', '0.4154']]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,13 +328,6 @@
    "source": [
     "result"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
