--- a/USE_encoder_cosine.ipynb
+++ b/USE_encoder_cosine.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "module_url = \"https://tfhub.dev/google/universal-sentence-encoder/2\""
+    "module_url = \"https://tfhub.dev/google/universal-sentence-encoder/4\""
    ]
   },
   {
@@ -30,27 +30,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embed = hub.Module(module_url)"
+    "embed = hub.load(module_url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "read = pd.read_csv('dataset/article_data_newyork', delimiter=',', header=None)\n",
-    "data_articles = read.iloc[:,:].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "read = pd.read_csv('dataset/table_data_newyork', delimiter=',', header=None)\n",
-    "data_tables = read.iloc[:,:].values"
+    "articles = pd.read_csv('dataset/data_articles_test.csv', delimiter=',', keep_default_na=False)\n",
+    "tables = pd.read_csv('dataset/dataset_distinct_tables.csv', delimiter=',', keep_default_na=False)"
    ]
   },
   {
@@ -69,59 +59,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 6600/6600 [00:00<00:00, 109310.34it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "articles_title = []\n",
     "articles_id = []\n",
     "\n",
-    "for article_id, title, text in tqdm(data_articles):\n",
+    "for i, row in articles.iterrows():\n",
     "    \n",
-    "    articles_id.append(article_id)\n",
-    "    \n",
-    "    articles_title.append(title)"
+    "    articles_id.append(row['page_id'])\n",
+    "    articles_title.append(row['page_title'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with tf.Session() as sess:\n",
-    "    \n",
-    "    sess.run([tf.global_variables_initializer(), tf.tables_initializer()])\n",
-    "            \n",
-    "    embedding_articles = sess.run(embed(articles_title))"
+    "embedding_articles = embed(articles_title)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,28 +91,15 @@
     "\n",
     "for current_embedding in embedding_articles:\n",
     "    \n",
-    "    article_dense_vector.append(current_embedding)"
+    "    article_dense_vector.append(current_embedding.numpy())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6600"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(article_dense_vector)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -168,56 +117,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 298793/298793 [00:00<00:00, 356276.52it/s]\n"
+      "89935it [00:07, 11699.06it/s]\n"
      ]
     }
    ],
    "source": [
     "tables_title = []\n",
+    "tables_ids = []\n",
     "\n",
-    "for current_table in tqdm(data_tables):\n",
+    "for i, row in tqdm(tables.iterrows()):\n",
     "    \n",
-    "    tables_title.append(str(current_table[1]))"
+    "    tables_ids.append(row['table_id'])\n",
+    "    tables_title.append(row['table_page_title'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with tf.Session() as sess:\n",
-    "    \n",
-    "    sess.run([tf.global_variables_initializer(), tf.tables_initializer()])\n",
-    "            \n",
-    "    embedding_tables = sess.run(embed(tables_title))"
+    "embedding_tables = embed(tables_title)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,28 +157,15 @@
     "\n",
     "for current_embedding in embedding_tables:\n",
     "    \n",
-    "    tables_dense_vector.append(current_embedding)"
+    "    tables_dense_vector.append(current_embedding.numpy())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "298793"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(tables_dense_vector)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -264,28 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_id_ranked_tables(top_k,distance_vector):\n",
-    "\n",
-    "    id_ranked_tables = []\n",
-    "\n",
-    "    for current_top_k in top_k:\n",
-    "        \n",
-    "        index = np.where(distance_vector == current_top_k)\n",
-    "         \n",
-    "        index_colummun = index[0][0]\n",
-    "        \n",
-    "        id_ranked_tables.append(data_tables[index_colummun][0])\n",
-    "\n",
-    "    return id_ranked_tables"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +200,7 @@
     "\n",
     "    for id_table in id_ranked_tables:\n",
     "    \n",
-    "        if id_table == id_query_goal:\n",
+    "        if id_table[0] == id_query_goal:\n",
     "    \n",
     "            accuracy = 1\n",
     "            \n",
@@ -306,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,17 +221,17 @@
     "            \n",
     "        average_top1.append(accuracy)\n",
     "        \n",
+    "    if k == 5:\n",
+    "            \n",
+    "        average_top5.append(accuracy)\n",
+    "        \n",
     "    if k == 10:\n",
     "            \n",
     "        average_top10.append(accuracy)\n",
     "        \n",
-    "    if k == 100:\n",
+    "    if k == 20:\n",
     "            \n",
-    "        average_top100.append(accuracy)\n",
-    "        \n",
-    "    if k == 1000:\n",
-    "            \n",
-    "        average_top1000.append(accuracy)"
+    "        average_top20.append(accuracy)"
    ]
   },
   {
@@ -345,55 +250,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 39%|███▊      | 2557/6600 [2:13:37<3:32:08,  3.15s/it]"
+      "100%|██████████| 1026/1026 [05:11<00:00,  3.23it/s]\n"
      ]
     }
    ],
    "source": [
     "average_top1 = []\n",
+    "average_top5 = []\n",
     "average_top10 = []\n",
-    "average_top100 = []\n",
-    "average_top1000 = []\n",
+    "average_top20 = []\n",
     "\n",
-    "top_k = [1,10,100,1000]\n",
+    "top_k = [1,5,10,20]\n",
     "\n",
     "for i in tqdm(range(len(article_dense_vector))):\n",
     "    \n",
+    "    idQueryGoal = articles_id[i]\n",
+    "    \n",
     "    distance_vector = pairwise_distances(article_dense_vector[i].reshape(1,512), tables_dense_vector, metric='cosine')\n",
     "    \n",
-    "    id_query_goal = int(articles_id[i])\n",
+    "    #creating the dataframe\n",
+    "    all_tables_score = []\n",
     "    \n",
-    "    for accuracy_k in top_k:\n",
+    "    for j in range(len(tables_ids)):\n",
     "        \n",
-    "        count_top_tables = accuracy_k\n",
+    "        table_id = tables_ids[j]\n",
+    "        table_score = distance_vector[0][j]\n",
     "        \n",
-    "        top_k_rank = nsmallest(count_top_tables, distance_vector[0])\n",
+    "        new_row = {\"table_id\": table_id,\"table_score\": table_score}\n",
+    "        \n",
+    "        all_tables_score.append(new_row)\n",
+    "        \n",
+    "    df_all_tables_scores = pd.DataFrame(all_tables_score)\n",
+    "    df_tables_sorting = df_all_tables_scores.sort_values('table_score')\n",
     "    \n",
-    "        id_ranked_tables = get_id_ranked_tables(top_k_rank,distance_vector[0])\n",
+    "    #compute the accuracy\n",
+    "    for accuracyK in top_k:\n",
     "        \n",
-    "        accuracy_value = get_accuracy(id_ranked_tables,id_query_goal)\n",
+    "        selected_top = df_tables_sorting.head(accuracyK)\n",
+    "        min_score = selected_top['table_score'].max()\n",
+    "        draw_tables_socres = df_tables_sorting[df_tables_sorting['table_score'] <= min_score]\n",
+    "        final_ranked_tables = draw_tables_socres.iloc[:,0:1].values\n",
+    "        \n",
+    "        accuracy_value = get_accuracy(final_ranked_tables,idQueryGoal)\n",
     "        \n",
     "        #save the accuracy on the list\n",
-    "        save_accuracy(accuracy_k,accuracy_value)"
+    "        save_accuracy(accuracyK,accuracy_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1579\n",
+      "0.2398\n",
+      "0.2827\n",
+      "0.3207\n"
+     ]
+    }
+   ],
    "source": [
-    "print(str(round(np.mean(average_top1),4))+\" (±) \"+str(round(np.std(average_top1),4)))\n",
-    "print(str(round(np.mean(average_top10),4))+\" (±) \"+str(round(np.std(average_top10),4)))\n",
-    "print(str(round(np.mean(average_top100),4))+\" (±) \"+str(round(np.std(average_top100),4)))\n",
-    "print(str(round(np.mean(average_top1000),4))+\" (±) \"+str(round(np.std(average_top1000),4)))"
+    "print(str(round(np.mean(average_top1),4)))\n",
+    "print(str(round(np.mean(average_top5),4)))\n",
+    "print(str(round(np.mean(average_top10),4)))\n",
+    "print(str(round(np.mean(average_top20),4)))"
    ]
   }
  ],
@@ -413,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
