--- a/elastic_search3.ipynb
+++ b/elastic_search3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "import random\n",
     "from elasticsearch import Elasticsearch\n",
     "from elasticsearch import helpers\n",
-    "indexingTables = Elasticsearch(timeout=30, max_retries=10, retry_on_timeout=True)"
+    "indexing_distinct_tables = Elasticsearch(timeout=30, max_retries=10, retry_on_timeout=True)"
    ]
   },
   {
@@ -52,9 +52,9 @@
     }
    ],
    "source": [
-    "indexingTables.indices.close(index='tables')\n",
-    "indexingTables.indices.put_settings(index='tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"BM25\"}}}})\n",
-    "indexingTables.indices.open(index='tables')"
+    "indexing_distinct_tables.indices.close(index='distinct_tables')\n",
+    "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"BM25\"}}}})\n",
+    "indexing_distinct_tables.indices.open(index='distinct_tables')"
    ]
   },
   {
@@ -65,8 +65,8 @@
    "source": [
     "def search_indexing(query, tableField, topK):\n",
     "    \n",
-    "    result= indexingTables.search(\n",
-    "        index=\"tables\", \n",
+    "    result= indexing_distinct_tables.search(\n",
+    "        index=\"distinct_tables\", \n",
     "        body = {\n",
     "        \"_source\": [\"tablePgID\"],\n",
     "        \"from\" : 0,\n",
@@ -112,76 +112,75 @@
     "    accuracy = []\n",
     "\n",
     "    for i,row in (articles.iterrows()):\n",
-    "    \n",
+    "\n",
     "        articl_key = row['page_id']\n",
     "        article_title = row['page_title']\n",
-    "            \n",
-    "        result = search_indexing(article_title,tableField,topK)\n",
-    "    \n",
-    "        idRankedTables = []\n",
-    "    \n",
-    "        for hit in result['hits']['hits']:\n",
-    "    \n",
-    "            tablePgId = hit['_source']['tablePgID']\n",
-    "    \n",
-    "            idRankedTables.append(tablePgId)\n",
-    "    \n",
-    "        accuracy.append(get_accuracy(idRankedTables,articl_key))\n",
+    "\n",
+    "        result = search_indexing(article_title,\"\",1000)\n",
+    "\n",
+    "        if result['hits']['total'] > 0:\n",
+    "\n",
+    "            return_tables = []\n",
+    "\n",
+    "            for hit in result['hits']['hits']:\n",
+    "\n",
+    "                tablePgId = hit['_source']['tablePgID']\n",
+    "                table_score = hit['_score']\n",
+    "                new_row = {\"table_id\": tablePgId,\"table_score\": table_score}\n",
+    "                return_tables.append(new_row)\n",
+    "\n",
+    "            df_return_tables = pd.DataFrame(return_tables)\n",
+    "            df_return_tables_sorting = df_return_tables.sort_values('table_score', ascending=False)\n",
+    "\n",
+    "            selected_top = df_return_tables_sorting.head(topK)\n",
+    "            min_score = selected_top['table_score'].min()\n",
+    "            draw_tables_socres = df_return_tables_sorting[df_return_tables_sorting['table_score'] >= min_score]\n",
+    "            final_ranked_tables = draw_tables_socres.iloc[:,0:1].values\n",
+    "\n",
+    "            accuracy.append(get_accuracy(final_ranked_tables,articl_key))\n",
     "\n",
     "    print(str(round(np.mean(accuracy),4)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "tableField = [\"tablePgTitle\"]\n",
     "#tableField = [\"tablePgTitle\",\"tableSectionTitle\",\"tableCaption\",\"tableHeader\",\"tableBody\"]\n",
-    "topK = [1,5,10,20,50,100,1000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for k in topK:\n",
-    "    \n",
-    "    print(\"\")\n",
-    "    \n",
-    "    for field in tableField:\n",
-    "        \n",
-    "        print(\"Acc@\"+str(k)+\" - \"+field)\n",
-    "        \n",
-    "        execute_search(field,k)"
+    "topK = [50]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for k in topK:\n",
+    "    \n",
+    "#     print(\"\")\n",
+    "    \n",
+    "#     for field in tableField:\n",
+    "        \n",
+    "#         print(\"Acc@\"+str(k)+\" - \"+field)\n",
+    "        \n",
+    "#         execute_search(field,k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acc@1\n",
-      "0.2407\n",
-      "Acc@5\n",
-      "0.2904\n",
-      "Acc@10\n",
-      "0.3236\n",
-      "Acc@20\n",
-      "0.3596\n",
       "Acc@50\n",
-      "0.4016\n",
-      "Acc@100\n",
-      "0.4308\n",
-      "Acc@1000\n",
-      "0.4834\n"
+      "0.4477\n"
      ]
     }
    ],
@@ -192,6 +191,41 @@
     "    \n",
     "    execute_search(\"\",k)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
